docs/blog/posts/2024/0023-operational-authentication/kratos/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kratos
spec:
  rules:
    - host: auth-server.localhost.com
      http:
        paths:
          - backend:
              service:
                name: kratos-public
                port:
                  number: 80
            path: /self-service
            pathType: Prefix
          - backend:
              service:
                name: kratos-public
                port:
                  number: 80
            path: /sessions
            pathType: Prefix
